--- a/tracking.html
+++ b/tracking.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="main">
-      <div class="order-tracking">
+      <!-- <div class="order-tracking">
         <a class="back-to-orders-link link-primary" href="orders.html">
           View all orders
         </a>
@@ -86,8 +86,10 @@
         <div class="progress-bar-container">
           <div class="progress-bar"></div>
         </div>
-      </div>
+      </div> -->
     </div>
+
+    <script type="module" src="scripts/tracking.js"></script>
 
     <script>
       const url = new URL(window.location.href);
